Overriding context crashes when run from command line #84964

Closed
opened 2021-01-22 15:30:21 +01:00 by Marian Seman · 9 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: Quadro P1000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.41

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177

Short description of error
Using operator with necessary context override ( bpy.ops.mesh.knife_project and bpy.ops.view3d.select_box for me) crashes with EXCEPTION_ACCESS_VIOLATION when trying to run from command line on background.
The same script run directly from Blender is causing no issues. Only using overridden context in operator causes EXCEPTION_ACCESS_VIOLATION, however operator needs overridden context to work correctly. Omitting override results in runtime error as expected.
I was working with Blender version 2.83 when I run into this and issue persisted through update to latest version. When I tested it, I also tried to save .blend file to open on scripting screen directly, to have the same context as when run from blender, but I still got the same error.

Exact steps for others to reproduce the error

  • Edit provided script (testOverrideCut.py) with path to where .blend file will save on successful run (line 55) - delete if not needed for checking result
  • Edit path to testOverrideCut.py, err.txt and log.txt in provided command:
blender.exe --background --python C:\tmp\testOverrideCut.py --log-level -1 --debug-all 2> err.txt 1> log.txt
  • Open Windows command prompt
  • Run command

testOverrideCut.py

image.png

image.png

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: Quadro [P1000](https://archive.blender.org/developer/P1000.txt)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.41 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` **Short description of error** Using operator with necessary context override ( bpy.ops.mesh.knife_project and bpy.ops.view3d.select_box for me) crashes with EXCEPTION_ACCESS_VIOLATION when trying to run from command line on background. The same script run directly from Blender is causing no issues. Only using overridden context in operator causes EXCEPTION_ACCESS_VIOLATION, however operator needs overridden context to work correctly. Omitting override results in runtime error as expected. I was working with Blender version 2.83 when I run into this and issue persisted through update to latest version. When I tested it, I also tried to save .blend file to open on scripting screen directly, to have the same context as when run from blender, but I still got the same error. **Exact steps for others to reproduce the error** * Edit provided script (testOverrideCut.py) with path to where .blend file will save on successful run (line 55) - delete if not needed for checking result * Edit path to testOverrideCut.py, err.txt and log.txt in provided command: ``` blender.exe --background --python C:\tmp\testOverrideCut.py --log-level -1 --debug-all 2> err.txt 1> log.txt ``` * Open Windows command prompt * Run command [testOverrideCut.py](https://archive.blender.org/developer/F9592418/testOverrideCut.py) ![image.png](https://archive.blender.org/developer/F9592421/image.png) ![image.png](https://archive.blender.org/developer/F9592426/image.png)
Author

Added subscriber: @mseman

Added subscriber: @mseman

Added subscriber: @rjg

Added subscriber: @rjg

The knife operator requires OpenGL and an active viewport. It does not work in background mode. With the modified context you are forcing it to run, but it fails to do so.

The knife operator requires OpenGL and an active viewport. It does not work in background mode. With the modified context you are forcing it to run, but it fails to do so.
Author

Oh.. I had no idea about this limitation and haven't figured it out from error message. Thanks. So is there a way around this or are all attempts to to run operators that need view_3d window, on batch of .blend files doomed?

Oh.. I had no idea about this limitation and haven't figured it out from error message. Thanks. So is there a way around this or are all attempts to to run operators that need view_3d window, on batch of .blend files doomed?

This issue was referenced by 4792d988fb

This issue was referenced by 4792d988fbaa3a49313f367bc9bb27e889d5d0cf

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2021-01-22 19:21:13 +01:00

The knife operator has gone through so many changes that it is possible that it no longer needs OpenGL.
If so, this patch would solve the problem:

diff --git a/source/blender/editors/mesh/editmesh_knife.c b/source/blender/editors/mesh/editmesh_knife.c
index f45f48e0e32..2374ff1a7d8 100644
--- a/source/blender/editors/mesh/editmesh_knife.c
+++ b/source/blender/editors/mesh/editmesh_knife.c
@@ -3067,8 +3067,6 @@ void EDBM_mesh_knife(bContext *C, LinkNode *polys, bool use_tag, bool cut_throug
 {
   KnifeTool_OpData *kcd;
 
-  view3d_operator_needs_opengl(C);
-
   /* init */
   {
     const bool only_select = false;

I'm studying the code to see if we can apply the patch without any problems.

(However, I believe there are more convenient ways to achieve the same desired result in the script. Maybe using bmesh operators like bisect_edges, bisect_plane, split).

The knife operator has gone through so many changes that it is possible that it no longer needs OpenGL. If so, this patch would solve the problem: ``` diff --git a/source/blender/editors/mesh/editmesh_knife.c b/source/blender/editors/mesh/editmesh_knife.c index f45f48e0e32..2374ff1a7d8 100644 --- a/source/blender/editors/mesh/editmesh_knife.c +++ b/source/blender/editors/mesh/editmesh_knife.c @@ -3067,8 +3067,6 @@ void EDBM_mesh_knife(bContext *C, LinkNode *polys, bool use_tag, bool cut_throug { KnifeTool_OpData *kcd; - view3d_operator_needs_opengl(C); - /* init */ { const bool only_select = false; ``` I'm studying the code to see if we can apply the patch without any problems. (However, I believe there are more convenient ways to achieve the same desired result in the script. Maybe using bmesh operators like `bisect_edges`, `bisect_plane`, `split`).

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84964
No description provided.